--- a/ai-resume-builder/src/index.css
+++ b/ai-resume-builder/src/index.css
@@ -1,6 +1,17 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+.rsw-ce ul {
+  list-style: disc;
+  padding-left: 2em;
+}
+
+.rsw-ce ol {
+  list-style: decimal;
+  padding-left: 2em;
+}
+
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
